--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
   <body>
     <div id="root"></div>
     <!-- single page app in bundle.js -->
-    <script src="/e-serebriakov.github.io/build/bundle.js"></script>
+    <script src="/e-serebriakov.github.io/public/index.js"></script>
   </body>
 </html>
